Fixed rendering of index.html on mobile devices.

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,14 +1,11 @@
 body {
-  font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.45;
   color: #111;
   background-color: #191f32;
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-feature-settings: "kern" 1;
-  -moz-font-feature-settings: "kern" 1;
-  -o-font-feature-settings: "kern" 1;
-  font-feature-settings: "kern" 1;
-  font-kerning: normal;
   padding: 30px;
+  word-wrap: break-word;
 }
 
 @media only screen and (max-width: 600px) {
@@ -31,7 +28,7 @@ body > div {
   margin-right: auto;
 }
 
-div.box-Body {
+div.Box-body {
   margin: 0 !important;
 }
 
@@ -42,7 +39,6 @@ summary {
 
 hr {
   color: #e7edf2;
-  #e7edf2
   background-color: #bbb;
   height: 1px;
   flex: 0 1 auto;
@@ -51,13 +47,9 @@ hr {
   border: none;
 }
 
-.hljs-operator {
-  color: #868686;
-}
-
 a {
   color: #0366d6;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:visited {
@@ -73,7 +65,7 @@ pre {
   border: 1px solid #e7edf2;
   border-radius: 8px;
   font-size: 85%;
-  line-height: 1.45;
+  line-height: 1.40;
   overflow: auto;
   padding: 12px;
   background-color: rgba(0,0,0,0.5);
@@ -124,7 +116,7 @@ blockquote * {
 table {
   border-spacing: 2px;
   display: block;
-  font-size: 14px;
+  font-size: 16px;
   overflow: auto;
   width: 100%;
   margin-bottom: 16px;
@@ -154,6 +146,7 @@ table tr:nth-child(2n) {
 
 img {
   max-width: 100%;
+  box-sizing: content-box;
 }
 
 h1 img {
@@ -166,10 +159,12 @@ p>img {
 }
 
 p {
-  line-height: 24px;
+  line-height: 1.45;
   font-weight: 400;
   font-size: 16px;
   color: #e7edf2;
+  margin-top: 0px;
+  margin-bottom: 16px;
 }
 
 ul {
@@ -180,7 +175,7 @@ li {
   color: #e7edf2;
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.45;
 }
 
 li+li {
@@ -190,6 +185,7 @@ li+li {
 * {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #e7edf2;
+  box-sizing: border-box;
 }
 
 a:visited {
@@ -201,92 +197,4 @@ h2,
 h3 {
   border-bottom: 1px solid #eaecef;
   color: #a7c360;
-}
-
-code>* {
-  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace !important;
-}
-</style>
-      <style type='text/css'>pre code.hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 1em
-}
-code.hljs {
-  padding: 3px 5px
-}
-
-.hljs {
-  color: #abb2bf;
-  background: #282c34
-}
-
-.hljs-comment,
-.hljs-quote {
-  color: #5c6370;
-  font-style: italic
-}
-
-.hljs-doctag,
-.hljs-keyword,
-.hljs-formula {
-  color: #c678dd
-}
-
-.hljs-section,
-.hljs-name,
-.hljs-selector-tag,
-.hljs-deletion,
-.hljs-subst {
-  color: #e06c75
-}
-
-.hljs-literal {
-  color: #56b6c2
-}
-
-.hljs-string,
-.hljs-regexp,
-.hljs-addition,
-.hljs-attribute,
-.hljs-meta .hljs-string {
-  color: #98c379
-}
-
-.hljs-attr,
-.hljs-variable,
-.hljs-template-variable,
-.hljs-type,
-.hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-number {
-  color: #d19a66
-}
-
-.hljs-symbol,
-.hljs-bullet,
-.hljs-link,
-.hljs-meta,
-.hljs-selector-id,
-.hljs-title {
-  color: #61aeee
-}
-
-.hljs-built_in,
-.hljs-title.class_,
-.hljs-class .hljs-title {
-  color: #e6c07b
-}
-
-.hljs-emphasis {
-  font-style: italic
-}
-
-.hljs-strong {
-  font-weight: bold
-}
-
-.hljs-link {
-  text-decoration: underline
 }
